--- a/boardgame-frontend/src/app/globals.css
+++ b/boardgame-frontend/src/app/globals.css
@@ -1,4 +1,16 @@
 @import 'tailwindcss';
+@utility scrollbar-hide {
+    /* Firefox */
+    scrollbar-width: none;
+
+    /* IE and Edge */
+    -ms-overflow-style: none;
+
+    /* Chrome, Safari and Opera */
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
 
 @font-face {
     font-family: 'Pretendard';
